--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,19 @@
-name: SSH Command
+name : Golang
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
+  pull_request:
+    branches: [master]
+
 jobs:
-  ssh:
+  deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up SSH
-      run: |
-        echo "$DEPLOY_KEY" > ssh_key
-        chmod 600 ssh_key
-        eval $(ssh-agent -s)
-        ssh-add ssh_key
-      env:
-        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
-
-    - name: SSH into the server
-      run: ssh -o StrictHostKeyChecking=no root@103.74.5.27 "ls -la"
+      - name: Sync
+        env:
+          dest: "root@103.74.5.27"
+        run: |
+          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
+          chmod 600 ~/deploy_key
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "ls -la"
