--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,26 @@ jobs:
 
       - name: Git Pull
         env:
-          dest: "root@103.74.5.27"
+          dest: "root@${{secrets.HOST}}"
         run: |
+          eval $(ssh-agent)
+          ssh-add ~/.ssh/vandyahmad24
           echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
           chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && git pull origin master"
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd /path/to/your/repository && git pull origin master"
 
-      - name: Docker Build and Run
+      - name: Docker Build
         run: |
           docker build -t vandyahmad2404/startup-be:latest .
+
+      - name: Docker Login
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Docker Push
+        run: |
+          docker push vandyahmad2404/startup-be:latest
+
+      - name: Docker Run
+        run: |
           docker run --name startup-be -p 8181:8181 -d vandyahmad2404/startup-be:latest
