--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,17 +18,27 @@ jobs:
           chmod 600 ~/deploy_key
           ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "ls -la"
 
-      - name: Git Pull and Docker Commands
+      - name: Git Pull
         env:
-          dest: "root@${{secrets.HOST}}"
+          dest: "root@103.74.5.27"
         run: |
-          eval $(ssh-agent)
-          ssh-add ~/.ssh/vandyahmad24
           echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
           chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && git pull origin master"
-          cd /startup-be  # Ganti dengan path ke direktori proyek Anda di VPS
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "eval $(ssh-agent) &&
+          ssh-add ~/.ssh/vandyahmad24 && cd startup-be/ && git pull origin master"
+
+      - name: Docker Build
+        run: |
           docker build -t vandyahmad2404/startup-be:latest .
+
+      - name: Docker Login
+        run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Docker Push
+        run: |
           docker push vandyahmad2404/startup-be:latest
+
+      - name: Docker Run
+        run: |
           docker run --name startup-be -p 8181:8181 -d vandyahmad2404/startup-be:latest
