add start up be

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Docker Build
         run: |
+          cd startup-be 
           docker build -t vandyahmad2404/startup-be:latest .
+      
 
       - name: Docker Login
         run: |
