--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
           chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && docker run -p 8181:8181 -d vandyahmad2404/startup-be:latest"
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && docker-compose up -d"
       
       
