--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,30 @@
-name: Golang
+name: Golang CI/CD
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Sync
-        env:
-          dest: "root@103.74.5.27"
-        run: |
-          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
-          chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "ls -la"
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - name: Git Pull
-        env:
-          dest: "root@103.74.5.27"
+      - name: Set up Docker
         run: |
-          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
-          chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && eval \$(ssh-agent) && ssh-add ~/.ssh/vandyahmad24 && git pull origin master"
+          docker build -t vandyahmad2404/startup-be .
+          docker tag vandyahmad2404/startup-be:latest my-golang-app:$(date +\%Y\%m\%d\%H\%M\%S)
+        continue-on-error: true
 
-      - name: Docker Build
-        env:
-          dest: "root@103.74.5.27"
+      - name: Push Docker Image
         run: |
-          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
-          chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && docker build -t vandyahmad2404/startup-be:latest ."
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker push vandyahmad2404/startup-be
+        continue-on-error: true
 
-      - name: Docker Run
-        env:
-          dest: "root@103.74.5.27"
-        run: |
-          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
-          chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be/ && docker-compose up -d"
-      
-      
