--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: "3.7"
+version: "3"
 services:
-  golang:
-    container_name: startup-be
+  startup-be:
     image: vandyahmad2404/startup-be
+    restart: always
+    container_name: startup-be
+    env_file: .env
     ports:
       - 8181:8181
