--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,12 @@ jobs:
       - name: Set up Docker
         run: |
           docker build -t vandyahmad2404/startup-be .
-          docker tag vandyahmad2404/startup-be:latest my-golang-app:$(date +\%Y\%m\%d\%H\%M\%S)
+          docker tag vandyahmad2404/startup-be:latest vandyahmad2404/startup-be:$(date +\%Y\%m\%d\%H\%M\%S)
         
 
       - name: Push Docker Image
         run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push vandyahmad2404/startup-be
+          docker push vandyahmad2404/startup-be:$(date +\%Y\%m\%d\%H\%M\%S)
 
