--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push vandyahmad2404/startup-be
 
-      - name: Deploy Server
+      - name: Deploy to server
         env:
-          dest: "root@${{secrets.HOSTS}}"
+          dest: "root@${{secrets.HOST}}"
         run: |
-            echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
-            chmod 600 ~/deploy_key
-            ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be && docker-compose up -d"
+          echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
+          chmod 600 ~/deploy_key
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be && docker-compose up -d"
