--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
           echo "${{secrets.DEPLOY_KEY}}" > ~/deploy_key
           chmod 600 ~/deploy_key
-          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be && docker-compose up -d"
+          ssh -o StrictHostKeyChecking=no -i ~/deploy_key $dest "cd startup-be && docker-compose down && docker-compose pull && docker-compose up -d"
